<!-- menu/menu_visits_toolbar.xml -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_select_visits"
        android:icon="@drawable/ic_select"
        android:title="@string/cd_select_visits"
        android:contentDescription="@string/cd_select_visits"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_filter_visits_submenu"
        android:icon="@drawable/ic_filter"
        android:title="@string/action_filter_options"
        app:showAsAction="ifRoom">
        <menu>
            <group>
                <item
                    android:id="@+id/filter_type_all"
                    android:title="@string/filter_type_all_visits" />
                <item
                    android:id="@+id/filter_type_active_temples"
                    android:title="@string/filter_type_active_temples" />
                <item
                    android:id="@+id/filter_type_historical_sites"
                    android:title="@string/filter_type_historical_sites" />
                <item
                    android:id="@+id/filter_type_visitors_centers"
                    android:title="@string/filter_type_visitors_centers" />
                <item
                    android:id="@+id/filter_type_under_construction"
                    android:title="@string/filter_type_under_construction" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_filter_visits"
        android:icon="@drawable/ic_export"
        android:title="@string/action_export_import"
        app:showAsAction="ifRoom" />
</menu>
