<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/home_fragment_destination">

    <!-- HomeFragment: Linked to the first item in your BottomNavigationView -->
    <fragment
        android:id="@+id/home_fragment_destination"
        android:name="net.dacworld.android.holyplacesofthelord.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <!-- PlacesFragment: Linked to the second item in your BottomNavigationView -->
    <fragment
        android:id="@+id/places_fragment_destination"
        android:name="net.dacworld.android.holyplacesofthelord.ui.places.PlacesFragment"
        android:label="@string/tab_label_places"
        tools:layout="@layout/fragment_places" >
        <action
            android:id="@+id/action_placesFragment_to_placeDetailFragment"
            app:destination="@id/placeDetailFragment"/>
    </fragment>

    <!-- PlaceDetailFragment: Destination for navigation FROM PlacesFragment -->
    <fragment
        android:id="@+id/placeDetailFragment"
        android:name="net.dacworld.android.holyplacesofthelord.ui.placedetail.PlaceDetailFragment"
        android:label="Place Details"
        tools:layout="@layout/fragment_place_detail" >
        <argument
            android:name="templeId"
            app:argType="string" />
    </fragment>

    <!-- ADD THIS FRAGMENT DESTINATION for OptionsFragment -->
    <fragment
        android:id="@+id/options_fragment_destination"
        android:name="net.dacworld.android.holyplacesofthelord.ui.places.OptionsFragment"
        android:label="@string/button_text_options"
        tools:layout="@layout/fragment_options" />
        <action
            android:id="@+id/action_placesFragment_to_optionsFragment"
            app:destination="@id/options_fragment_destination" />

</navigation>
